modified for defconfig.

--- a/configs/sama5d2_sisoul_platform_mmc_defconfig
+++ b/configs/sama5d2_sisoul_platform_mmc_defconfig
@@ -15,7 +15,6 @@ CONFIG_SMBIOS_PRODUCT_NAME="sama5d2_xplained"
 CONFIG_FIT=y
 CONFIG_SYS_EXTRA_OPTIONS="SAMA5D2,SYS_USE_MMC"
 CONFIG_BOOTDELAY=3
-CONFIG_CONSOLE_MUX=y
 # CONFIG_DISPLAY_BOARDINFO is not set
 CONFIG_SPL=y
 CONFIG_SPL_SEPARATE_BSS=y
@@ -77,4 +76,7 @@ CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_STORAGE=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_ATMEL_USBA=y
+CONFIG_DM_VIDEO=y
+# CONFIG_CONSOLE_NORMAL is not set
+CONFIG_ATMEL_HLCD=y
 CONFIG_SMBIOS_MANUFACTURER="atmel"
